--- a/po/ca_ES.po
+++ b/po/ca_ES.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-17 16:32+0200\n"
+"POT-Creation-Date: 2020-06-26 10:53+0100\n"
 "PO-Revision-Date: 2015-12-31 15:36-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Catalan\n"
@@ -73,9 +73,8 @@ msgstr "Convertir a graus"
 msgid "Copy ship position (GPS fix required)"
 msgstr "Copiar posició del vaixell (Necessari GPS fix)"
 #
-msgid ""
-"Creates GPX files with\n"
-"Search and rescue patterns."
+#, fuzzy
+msgid "Creates GPX files with Search and Rescue patterns"
 msgstr ""
 "Crea fitxers GPX amb les plantilles\n"
 "Cerca i rescat."
@@ -320,12 +319,18 @@ msgid "n"
 msgstr "n"
 #
 #
+#
+#
 #~ msgid "Approach course"
 #~ msgstr "Rumb d'aproximació"
 #
 #
+#
+#
 #~ msgid "Decimal Degree"
 #~ msgstr "Graus decimals"
+#
+#
 #
 #
 #, fuzzy
@@ -333,9 +338,13 @@ msgstr "n"
 #~ msgstr "Graus"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "ES"
 #~ msgstr "S"
+#
+#
 #
 #
 #~ msgid ""
@@ -346,8 +355,12 @@ msgstr "n"
 #~ " el Quadrat"
 #
 #
+#
+#
 #~ msgid "For Ship Number      "
 #~ msgstr "Per al vaixell número      "
+#
+#
 #
 #
 #, fuzzy
@@ -355,12 +368,18 @@ msgstr "n"
 #~ msgstr "Longitud del segment          "
 #
 #
+#
+#
 #~ msgid "Number of cycles"
 #~ msgstr "Nombre de cicles"
 #
 #
+#
+#
 #~ msgid "Oil Rig Search"
 #~ msgstr "Cerca de Plataforma petroliera"
+#
+#
 #
 #
 #, fuzzy
@@ -368,37 +387,55 @@ msgstr "n"
 #~ msgstr "S"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "Parallel Track Search"
 #~ msgstr "Cerca Paral·lela"
+#
+#
 #
 #
 #~ msgid "Results"
 #~ msgstr "Resultats"
 #
 #
+#
+#
 #~ msgid "Route"
 #~ msgstr "Ruta"
+#
+#
 #
 #
 #~ msgid "SAR: Oil Rig"
 #~ msgstr "SAR: Plataforma petroliera"
 #
 #
+#
+#
 #~ msgid "SAR: Sector Search"
 #~ msgstr "SAR: Cerca de Sector"
+#
+#
 #
 #
 #~ msgid "SAR: Trackline"
 #~ msgstr "SAR: Línia de recorregut"
 #
 #
+#
+#
 #~ msgid "Search Pattern name for GPX file"
 #~ msgstr "Buscar nom de plantilla per al fitxer GPX"
 #
 #
+#
+#
 #~ msgid "Search Speed         "
 #~ msgstr "Buscar velocitat         "
+#
+#
 #
 #
 #, fuzzy
@@ -406,8 +443,12 @@ msgstr "n"
 #~ msgstr "S"
 #
 #
+#
+#
 #~ msgid "\\u00b0"
 #~ msgstr "\\u00b0"
+#
+#
 #
 #
 #~ msgid "\\u00b0 ' \""
