--- a/po/et_EE.po
+++ b/po/et_EE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-17 16:32+0200\n"
+"POT-Creation-Date: 2020-06-26 10:53+0100\n"
 "PO-Revision-Date: 2016-02-25 08:05-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Estonian\n"
@@ -73,9 +73,8 @@ msgstr "Muuda kraadiks"
 msgid "Copy ship position (GPS fix required)"
 msgstr "Kopeeri laeva asukoht (GPS'i koht vajalik)"
 #
-msgid ""
-"Creates GPX files with\n"
-"Search and rescue patterns."
+#, fuzzy
+msgid "Creates GPX files with Search and Rescue patterns"
 msgstr ""
 "Loo GPX-fail koos otsingu\n"
 "ja pääste mustritega."
@@ -320,12 +319,18 @@ msgid "n"
 msgstr "tk"
 #
 #
+#
+#
 #~ msgid "Approach course"
 #~ msgstr "Lähenemiskurss"
 #
 #
+#
+#
 #~ msgid "Decimal Degree"
 #~ msgstr "Kraadi kümnendikes"
+#
+#
 #
 #
 #, fuzzy
@@ -333,9 +338,13 @@ msgstr "tk"
 #~ msgstr "kraadi"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "ES"
 #~ msgstr "S"
+#
+#
 #
 #
 #~ msgid ""
@@ -346,8 +355,12 @@ msgstr "tk"
 #~ "         otsing"
 #
 #
+#
+#
 #~ msgid "For Ship Number      "
 #~ msgstr "Laeva nr .. jaoks"
+#
+#
 #
 #
 #, fuzzy
@@ -355,12 +368,18 @@ msgstr "tk"
 #~ msgstr "Lõigu pikkus      "
 #
 #
+#
+#
 #~ msgid "Number of cycles"
 #~ msgstr "Korduste arv"
 #
 #
+#
+#
 #~ msgid "Oil Rig Search"
 #~ msgstr "Suureneva ala otsing"
+#
+#
 #
 #
 #, fuzzy
@@ -368,37 +387,55 @@ msgstr "tk"
 #~ msgstr "S"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "Parallel Track Search"
 #~ msgstr "Rööpotsing"
+#
+#
 #
 #
 #~ msgid "Results"
 #~ msgstr "Tulemused"
 #
 #
+#
+#
 #~ msgid "Route"
 #~ msgstr "Teekond"
+#
+#
 #
 #
 #~ msgid "SAR: Oil Rig"
 #~ msgstr "SAR: puurtorn"
 #
 #
+#
+#
 #~ msgid "SAR: Sector Search"
 #~ msgstr "SAR: sektorotsing"
+#
+#
 #
 #
 #~ msgid "SAR: Trackline"
 #~ msgstr "SAR: rajajoon"
 #
 #
+#
+#
 #~ msgid "Search Pattern name for GPX file"
 #~ msgstr "Otsingu mustri GPX-faili nimi"
 #
 #
+#
+#
 #~ msgid "Search Speed         "
 #~ msgstr "Kiirus otsingul    "
+#
+#
 #
 #
 #, fuzzy
@@ -406,8 +443,12 @@ msgstr "tk"
 #~ msgstr "S"
 #
 #
+#
+#
 #~ msgid "\\u00b0"
 #~ msgstr "\\u00b0"
+#
+#
 #
 #
 #~ msgid "\\u00b0 ' \""
