--- a/po/fr_FR.po
+++ b/po/fr_FR.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-17 16:32+0200\n"
+"POT-Creation-Date: 2020-06-26 10:53+0100\n"
 "PO-Revision-Date: 2016-02-27 08:04-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: French\n"
@@ -73,9 +73,8 @@ msgstr "Convertir en degré"
 msgid "Copy ship position (GPS fix required)"
 msgstr "Copier la position du bateau (Le GPS doit avoir fait sont \"fixe\")"
 #
-msgid ""
-"Creates GPX files with\n"
-"Search and rescue patterns."
+#, fuzzy
+msgid "Creates GPX files with Search and Rescue patterns"
 msgstr ""
 "Création d'un fichier GPX avec\n"
 "les modèles recherchés et sauvegardés."
@@ -321,12 +320,18 @@ msgid "n"
 msgstr "n"
 #
 #
+#
+#
 #~ msgid "Approach course"
 #~ msgstr "COG de recherche"
 #
 #
+#
+#
 #~ msgid "Decimal Degree"
 #~ msgstr "Degré décimal"
+#
+#
 #
 #
 #, fuzzy
@@ -334,9 +339,13 @@ msgstr "n"
 #~ msgstr "Degrés"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "ES"
 #~ msgstr "S"
+#
+#
 #
 #
 #~ msgid ""
@@ -347,8 +356,12 @@ msgstr "n"
 #~ "     "
 #
 #
+#
+#
 #~ msgid "For Ship Number      "
 #~ msgstr "Pour le bateau numéro"
+#
+#
 #
 #
 #, fuzzy
@@ -356,12 +369,18 @@ msgstr "n"
 #~ msgstr "Longueur du segment"
 #
 #
+#
+#
 #~ msgid "Number of cycles"
 #~ msgstr "Nombre de cycles"
 #
 #
+#
+#
 #~ msgid "Oil Rig Search"
 #~ msgstr "Recherche dans un secteur angulaire"
+#
+#
 #
 #
 #, fuzzy
@@ -369,37 +388,55 @@ msgstr "n"
 #~ msgstr "S"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "Parallel Track Search"
 #~ msgstr "Recherche par segments parallèles"
+#
+#
 #
 #
 #~ msgid "Results"
 #~ msgstr "Résultats"
 #
 #
+#
+#
 #~ msgid "Route"
 #~ msgstr "Route"
+#
+#
 #
 #
 #~ msgid "SAR: Oil Rig"
 #~ msgstr "SAR: Dans un secteur angulaire"
 #
 #
+#
+#
 #~ msgid "SAR: Sector Search"
 #~ msgstr "SAR : Par zones triangulaires"
+#
+#
 #
 #
 #~ msgid "SAR: Trackline"
 #~ msgstr "SAR : Par segments parallèles"
 #
 #
+#
+#
 #~ msgid "Search Pattern name for GPX file"
 #~ msgstr "Recherche par nom de modèle pour le fichier GPX"
 #
 #
+#
+#
 #~ msgid "Search Speed         "
 #~ msgstr "vitesse de recherche"
+#
+#
 #
 #
 #, fuzzy
@@ -407,8 +444,12 @@ msgstr "n"
 #~ msgstr "S"
 #
 #
+#
+#
 #~ msgid "\\u00b0"
 #~ msgstr "\\u00b0"
+#
+#
 #
 #
 #~ msgid "\\u00b0 ' \""
