--- a/po/pl_PL.po
+++ b/po/pl_PL.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-17 16:32+0200\n"
+"POT-Creation-Date: 2020-06-26 10:53+0100\n"
 "PO-Revision-Date: 2016-02-18 16:09-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Polish\n"
@@ -74,9 +74,7 @@ msgstr ""
 msgid "Copy ship position (GPS fix required)"
 msgstr ""
 #
-msgid ""
-"Creates GPX files with\n"
-"Search and rescue patterns."
+msgid "Creates GPX files with Search and Rescue patterns"
 msgstr ""
 #
 msgid "Cursor"
