--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-17 16:32+0200\n"
+"POT-Creation-Date: 2020-06-26 10:53+0100\n"
 "PO-Revision-Date: 2016-02-26 09:18-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Finnish\n"
@@ -73,9 +73,8 @@ msgstr "Muunna asteiksi"
 msgid "Copy ship position (GPS fix required)"
 msgstr "Kopioi aluksen sijainti (GPS-paikka edellytetään)"
 #
-msgid ""
-"Creates GPX files with\n"
-"Search and rescue patterns."
+#, fuzzy
+msgid "Creates GPX files with Search and Rescue patterns"
 msgstr ""
 "Luo GPX tiedostot\n"
 "etsi ja pelasta malleille."
@@ -320,12 +319,18 @@ msgid "n"
 msgstr "n"
 #
 #
+#
+#
 #~ msgid "Approach course"
 #~ msgstr "Lähestymiskurssi"
 #
 #
+#
+#
 #~ msgid "Decimal Degree"
 #~ msgstr "Desimaaliaste"
+#
+#
 #
 #
 #, fuzzy
@@ -333,9 +338,13 @@ msgstr "n"
 #~ msgstr "Astetta"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "ES"
 #~ msgstr "S"
+#
+#
 #
 #
 #~ msgid ""
@@ -346,8 +355,12 @@ msgstr "n"
 #~ " Haku"
 #
 #
+#
+#
 #~ msgid "For Ship Number      "
 #~ msgstr "Alukselle Numero      "
+#
+#
 #
 #
 #, fuzzy
@@ -355,12 +368,18 @@ msgstr "n"
 #~ msgstr "Reittiosan pituus          "
 #
 #
+#
+#
 #~ msgid "Number of cycles"
 #~ msgstr "Jaksojen lukumäärä"
 #
 #
+#
+#
 #~ msgid "Oil Rig Search"
 #~ msgstr "Öljytornihaku"
+#
+#
 #
 #
 #, fuzzy
@@ -368,37 +387,55 @@ msgstr "n"
 #~ msgstr "S"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "Parallel Track Search"
 #~ msgstr "Rinnakkaishaku"
+#
+#
 #
 #
 #~ msgid "Results"
 #~ msgstr "Tulokset"
 #
 #
+#
+#
 #~ msgid "Route"
 #~ msgstr "Reitti"
+#
+#
 #
 #
 #~ msgid "SAR: Oil Rig"
 #~ msgstr "SAR: Öljytorni"
 #
 #
+#
+#
 #~ msgid "SAR: Sector Search"
 #~ msgstr "SAR: Sektorihaku"
+#
+#
 #
 #
 #~ msgid "SAR: Trackline"
 #~ msgstr "SAR: Jälkiviiva"
 #
 #
+#
+#
 #~ msgid "Search Pattern name for GPX file"
 #~ msgstr "Etsi kuvion nimi GPX-tiedostolle"
 #
 #
+#
+#
 #~ msgid "Search Speed         "
 #~ msgstr "Hakunopeus         "
+#
+#
 #
 #
 #, fuzzy
@@ -406,8 +443,12 @@ msgstr "n"
 #~ msgstr "S"
 #
 #
+#
+#
 #~ msgid "\\u00b0"
 #~ msgstr "\\u00b0"
+#
+#
 #
 #
 #~ msgid "\\u00b0 ' \""
