--- a/po/hu_HU.po
+++ b/po/hu_HU.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-17 16:32+0200\n"
+"POT-Creation-Date: 2020-06-26 10:53+0100\n"
 "PO-Revision-Date: 2015-09-20 20:30-0400\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Hungarian\n"
@@ -73,9 +73,7 @@ msgstr ""
 msgid "Copy ship position (GPS fix required)"
 msgstr ""
 #
-msgid ""
-"Creates GPX files with\n"
-"Search and rescue patterns."
+msgid "Creates GPX files with Search and Rescue patterns"
 msgstr ""
 #
 msgid "Cursor"
