--- a/po/ja_JP.po
+++ b/po/ja_JP.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-17 16:32+0200\n"
+"POT-Creation-Date: 2020-06-26 10:53+0100\n"
 "PO-Revision-Date: 2016-01-06 09:11-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Japanese\n"
@@ -73,9 +73,7 @@ msgstr ""
 msgid "Copy ship position (GPS fix required)"
 msgstr ""
 #
-msgid ""
-"Creates GPX files with\n"
-"Search and rescue patterns."
+msgid "Creates GPX files with Search and Rescue patterns"
 msgstr ""
 #
 msgid "Cursor"
@@ -298,14 +296,20 @@ msgid "n"
 msgstr ""
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "ES"
 #~ msgstr "S"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "PS"
 #~ msgstr "S"
+#
+#
 #
 #
 #, fuzzy
