--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-17 16:32+0200\n"
+"POT-Creation-Date: 2020-06-26 10:53+0100\n"
 "PO-Revision-Date: 2016-02-27 08:04-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Dutch\n"
@@ -73,9 +73,8 @@ msgstr "Converteer naar graden"
 msgid "Copy ship position (GPS fix required)"
 msgstr "Kopieer eigen positie (GPS-fix vereist)"
 #
-msgid ""
-"Creates GPX files with\n"
-"Search and rescue patterns."
+#, fuzzy
+msgid "Creates GPX files with Search and Rescue patterns"
 msgstr ""
 "SAR PlugIn voor OpenCPN\n"
 "\n"
@@ -321,12 +320,18 @@ msgid "n"
 msgstr " "
 #
 #
+#
+#
 #~ msgid "Approach course"
 #~ msgstr "Naderingskoers   "
 #
 #
+#
+#
 #~ msgid "Decimal Degree"
 #~ msgstr "Decimale graden"
+#
+#
 #
 #
 #, fuzzy
@@ -334,9 +339,13 @@ msgstr " "
 #~ msgstr "graden"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "ES"
 #~ msgstr "Z"
+#
+#
 #
 #
 #~ msgid ""
@@ -345,8 +354,12 @@ msgstr " "
 #~ msgstr "Vierkant zoekpatroon"
 #
 #
+#
+#
 #~ msgid "For Ship Number      "
 #~ msgstr "Voor vaartuig nr "
+#
+#
 #
 #
 #, fuzzy
@@ -354,12 +367,18 @@ msgstr " "
 #~ msgstr "Lijnlengte             "
 #
 #
+#
+#
 #~ msgid "Number of cycles"
 #~ msgstr "Aantal cycli          "
 #
 #
+#
+#
 #~ msgid "Oil Rig Search"
 #~ msgstr "Platform zoekpatroon"
+#
+#
 #
 #
 #, fuzzy
@@ -367,37 +386,55 @@ msgstr " "
 #~ msgstr "Z"
 #
 #
+#
+#
 #, fuzzy
 #~ msgid "Parallel Track Search"
 #~ msgstr "Lijn zoekpatroon"
+#
+#
 #
 #
 #~ msgid "Results"
 #~ msgstr "Resultaten"
 #
 #
+#
+#
 #~ msgid "Route"
 #~ msgstr "Route    "
+#
+#
 #
 #
 #~ msgid "SAR: Oil Rig"
 #~ msgstr "SAR: Platform zoekpatroon"
 #
 #
+#
+#
 #~ msgid "SAR: Sector Search"
 #~ msgstr "SAR: Sector zoekpatroon"
+#
+#
 #
 #
 #~ msgid "SAR: Trackline"
 #~ msgstr "SAR: Lijn zoekpatroon"
 #
 #
+#
+#
 #~ msgid "Search Pattern name for GPX file"
 #~ msgstr "Naam zoekpatroon voor GPX-bestand"
 #
 #
+#
+#
 #~ msgid "Search Speed         "
 #~ msgstr "Zoeksnelheid        "
+#
+#
 #
 #
 #, fuzzy
@@ -405,8 +442,12 @@ msgstr " "
 #~ msgstr "Z"
 #
 #
+#
+#
 #~ msgid "\\u00b0"
 #~ msgstr "\\u00b0"
+#
+#
 #
 #
 #~ msgid "\\u00b0 ' \""
